--- a/iHover.css
+++ b/iHover.css
@@ -31,10 +31,10 @@ h3 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: bolder;
   text-transform: uppercase;
-  font-size: 50px;
+  font-size: 40px;
   color: #454545;
-  padding-top: 15px;
-  padding-bottom: 35px;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
 
 .my-img {
@@ -63,12 +63,13 @@ h3 {
 
 .nav-tabs > li > a {
   border-radius: 4px 4px 0 0;
-  color: #69F0CF;
+  color: #2BF0BD;
+
 }
 
 .nav-tabs {
   background-color:#fff !important;
-  color: #69F0CF;
+  color: #2BF0BD;
 }
 
 .nav-tabs > li > a:hover{
@@ -267,13 +268,11 @@ font-family: 'Roboto Condensed', sans-serif;
   margin-right:auto;
   width:90%;
   color: #333;
-  padding-bottom: 50px;
   font-family: 'Calibri', sans-serif;
   font-size: 16px;
 }
 
 .about p {
-  padding-top: 10px;
   line-height: 30px;
 }
 
@@ -335,7 +334,7 @@ mark.green {
     max-width: 100%;
     width: 100%;
     height: auto;
-    margin-top: 30px;
+    margin-top: 20px;
     border-radius: 9px;
 }
 
@@ -413,4 +412,26 @@ figure figcaption {
 .tooltip-inner {
     width: 80px;
 
+}
+
+.icons {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: -50px;
+  font-weight: bold;
+}
+
+.icons p {
+  font-size: 10px;
+  padding-top: 10px;
+  font-family: 'Calibri', sans-serif;
+}
+
+.cover h3 {
+  font-size: 20px;
+  padding-bottom: 0px;
+}
+
+.legend {
+  font-size: 14px;
 }
