--- a/iHover.css
+++ b/iHover.css
@@ -289,6 +289,7 @@ font-family: 'Roboto Condensed', sans-serif;
 
 h4 {
   font-style: 'Roboto Condensed', sans-serif;
+  font-weight: bold;
 }
 
 h5 {
