--- a/style.css
+++ b/style.css
@@ -26,15 +26,16 @@
 
 .ih-item.circle {
   position: relative;
-  width: 220px;
-  height: 220px;
+  width: 200px;
+  height: 200px;
   border-radius: 20%;
 }
 .ih-item.circle .img {
   position: relative;
-  width: 220px;
-  height: 220px;
+  width: 200px;
+  height: 200px;
   border-radius: 3%;
+  margin-top: 20px;
 }
 .ih-item.circle .img:before {
   position: absolute;
@@ -2185,9 +2186,9 @@
   position: relative;
   letter-spacing: 2px;
   font-size: 22px;
-  margin: 0 30px;
+  margin: 0 10px;
   padding: 55px 0 0 0;
-  height: 110px;
+  height: 90px;
   text-shadow: 0 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.3);
   font-family: 'Roboto Condensed', sans-serif;
 }
